--- a/src/components/Map.css
+++ b/src/components/Map.css
@@ -1,3 +1,19 @@
-.canvas {
-  border: 1px solid red;
+.container {
+}
+
+.upper-section {
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem 0;
+}
+
+.zoom-group {
+}
+
+.zoom-group button {
+  width: 30px;
+  height: 30px;
+}
+canvas {
+  border: 1px solid black;
 }
